[gd_scene load_steps=38 format=3 uid="uid://bis136hblwi22"]

[ext_resource type="Script" path="res://Scrpits/skeleton.gd" id="1_y7ich"]
[ext_resource type="Texture2D" uid="uid://5eaqqfu1k2k8" path="res://Assets/Enemys/Skeleton/Walk.png" id="2_du2fh"]
[ext_resource type="Texture2D" uid="uid://c1tugbr6svat2" path="res://Assets/Enemys/Skeleton/Death.png" id="3_5bhb2"]
[ext_resource type="Texture2D" uid="uid://dxf5gqgfwqlfd" path="res://Assets/Enemys/Skeleton/Shield.png" id="4_tnbpa"]
[ext_resource type="Texture2D" uid="uid://2xkbsneaotay" path="res://Assets/Enemys/Skeleton/Take Hit.png" id="5_qn8vu"]
[ext_resource type="Texture2D" uid="uid://bjdje5liqbe35" path="res://Assets/Enemys/Skeleton/Idle.png" id="6_glbh8"]
[ext_resource type="AudioStream" uid="uid://b0wl1oftyh2ky" path="res://SoundFX/Minifantasy_Dungeon_SFX/21_orc_damage_3.wav" id="7_c4dj0"]
[ext_resource type="PackedScene" uid="uid://bvlwbq6jwj25q" path="res://Objects/HudObjects/progress_bar3.tscn" id="8_ewu7v"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5uiod"]
size = Vector2(35.9558, 51.4928)

[sub_resource type="Animation" id="Animation_mfm8o"]
resource_name = "Death"
length = 0.08
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Death:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.02, 0.04, 0.06),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.08),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_fv2po"]
resource_name = "Hit"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hit:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0)]
}

[sub_resource type="Animation" id="Animation_4liwr"]
resource_name = "Iddle"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Iddle:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0)]
}

[sub_resource type="Animation" id="Animation_i45ad"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Walk:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Death:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hit:frame_coords")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Shield:frame_coords")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Iddle:frame_coords")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_f0i2s"]
resource_name = "Shield"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Shield:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0)]
}

[sub_resource type="Animation" id="Animation_hcf08"]
resource_name = "Walk"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Walk:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ccbmn"]
_data = {
"Death": SubResource("Animation_mfm8o"),
"Hit": SubResource("Animation_fv2po"),
"Iddle": SubResource("Animation_4liwr"),
"RESET": SubResource("Animation_i45ad"),
"Shield": SubResource("Animation_f0i2s"),
"Walk": SubResource("Animation_hcf08")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cikv1"]
size = Vector2(1.08747, 36.0493)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_s1nbv"]
animation = &"Death"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_406ah"]
animation = &"Hit"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_rkmqu"]
animation = &"Iddle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_bdwi6"]
animation = &"Shield"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_85yif"]
animation = &"Walk"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_c46w1"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0ksy7"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xfj74"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ygqi0"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_sbav0"]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_6tsx1"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_30v5u"]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_5pe1o"]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_pu7gw"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_pdhuv"]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_cyqa1"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_34aix"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_7ofiv"]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8bu1g"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_n346a"]
states/Death/node = SubResource("AnimationNodeAnimation_s1nbv")
states/Death/position = Vector2(792, 100)
states/Hit/node = SubResource("AnimationNodeAnimation_406ah")
states/Hit/position = Vector2(465, 324)
states/Iddle/node = SubResource("AnimationNodeAnimation_rkmqu")
states/Iddle/position = Vector2(334, 100)
states/Shield/node = SubResource("AnimationNodeAnimation_bdwi6")
states/Shield/position = Vector2(589, 46)
states/Walk/node = SubResource("AnimationNodeAnimation_85yif")
states/Walk/position = Vector2(465, 202)
transitions = ["Start", "Iddle", SubResource("AnimationNodeStateMachineTransition_c46w1"), "Iddle", "Walk", SubResource("AnimationNodeStateMachineTransition_0ksy7"), "Walk", "Iddle", SubResource("AnimationNodeStateMachineTransition_xfj74"), "Iddle", "Shield", SubResource("AnimationNodeStateMachineTransition_ygqi0"), "Shield", "Iddle", SubResource("AnimationNodeStateMachineTransition_sbav0"), "Walk", "Shield", SubResource("AnimationNodeStateMachineTransition_6tsx1"), "Shield", "Walk", SubResource("AnimationNodeStateMachineTransition_30v5u"), "Hit", "Walk", SubResource("AnimationNodeStateMachineTransition_5pe1o"), "Walk", "Hit", SubResource("AnimationNodeStateMachineTransition_pu7gw"), "Hit", "Iddle", SubResource("AnimationNodeStateMachineTransition_pdhuv"), "Iddle", "Hit", SubResource("AnimationNodeStateMachineTransition_cyqa1"), "Hit", "Death", SubResource("AnimationNodeStateMachineTransition_34aix"), "Death", "End", SubResource("AnimationNodeStateMachineTransition_7ofiv"), "Walk", "Death", SubResource("AnimationNodeStateMachineTransition_8bu1g")]

[node name="Skeleton" type="CharacterBody2D" groups=["enemies"]]
scale = Vector2(1.00123, 0.893328)
collision_layer = 4
script = ExtResource("1_y7ich")

[node name="Area2D" type="Area2D" parent="."]
light_mask = 4
visibility_layer = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(2.99631, -5.33776e-07)
shape = SubResource("RectangleShape2D_5uiod")
disabled = true

[node name="Walk" type="Sprite2D" parent="."]
texture = ExtResource("2_du2fh")
hframes = 4

[node name="Death" type="Sprite2D" parent="."]
texture = ExtResource("3_5bhb2")
hframes = 4

[node name="Shield" type="Sprite2D" parent="."]
texture = ExtResource("4_tnbpa")
hframes = 4

[node name="Hit" type="Sprite2D" parent="."]
texture = ExtResource("5_qn8vu")
hframes = 4

[node name="Iddle" type="Sprite2D" parent="."]
texture = ExtResource("6_glbh8")
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ccbmn")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2.99632, 7.00581e-07)
rotation = -3.14159
scale = Vector2(33.0638, -1.4284)
shape = SubResource("RectangleShape2D_cikv1")

[node name="ArrowDamage" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_c4dj0")

[node name="AnimationTree" type="AnimationTree" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ccbmn")
}
tree_root = SubResource("AnimationNodeStateMachine_n346a")
anim_player = NodePath("../AnimationPlayer")

[node name="ProgressBar" parent="." instance=ExtResource("8_ewu7v")]
visible = false
position = Vector2(-19.9754, -36.9405)
scale = Vector2(0.564602, 0.620531)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
